AccentGrave (`) key doesn't work on Wayland build #99202

Closed
opened 2022-06-27 11:21:23 +02:00 by Alvaro Perez · 3 comments

System Information
Operating system: Linux-5.18.6-zen1-1-zen-x86_64-with-glibc2.35 64 Bits
Graphics card: AMD RENOIR (LLVM 13.0.1, DRM 3.46, 5.18.6-zen1-1-zen) AMD 4.6 (Core Profile) Mesa 22.1.2

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-27 07:29, hash: 7b6b740ace
Worked: (newest version of Blender that worked as expected)

Short description of error
On Wayland compilation, AccentGrave (`) key doesn't work and I can't access the view navigation pie menu. When inserting it manually in the keymap settings it says unsupported key. If I disable wayland support in the build it works again. Tested with the laptop's keyboard (Spanish) and an external keyboard keychron (English).

**System Information** Operating system: Linux-5.18.6-zen1-1-zen-x86_64-with-glibc2.35 64 Bits Graphics card: AMD RENOIR (LLVM 13.0.1, DRM 3.46, 5.18.6-zen1-1-zen) AMD 4.6 (Core Profile) Mesa 22.1.2 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-27 07:29, hash: `7b6b740ace` Worked: (newest version of Blender that worked as expected) **Short description of error** On Wayland compilation, AccentGrave (`) key doesn't work and I can't access the view navigation pie menu. When inserting it manually in the keymap settings it says unsupported key. If I disable wayland support in the build it works again. Tested with the laptop's keyboard (Spanish) and an external keyboard keychron (English).
Author

Added subscriber: @alvaroperez

Added subscriber: @alvaroperez

This issue was referenced by b8cc181808

This issue was referenced by b8cc18180893768f0f3eb5955543b57708506a59

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2022-06-28 03:37:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99202
No description provided.