Fix T99202: AccentGrave key doesn't work with Wayland

Implement scan-code fallback when the scan-code used for AccentGrave
on US keyboards doesn't map to a key known to GHOST.

Without this, shortcuts that use AccentGrave are inaccessible and the
key does nothing.

This matches functionality from X11, see [0].

[0]: f3427cbc981e5ad530d1a73ab4ecbf6b64751774